# fpga-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clocks.sv  top.sv  ulx3s.ys  ulx3s_v20.lpf
blinky/: blinky.sv
blinky/test/: blinky.cpp  blinky.h  test.cpp
cmake/: hdl.cmake
